--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,102 +1,16 @@
 @import'colors';
 @import'extends';
+@import'general';
+@import'home';
 @import'plane';
 @import'pin';
 @import'nav';
 @import'fonts';
 @import'login';
 @import'performance';
-@import'home';
 @import'landing';
 @import'destination';
 @import'contact';
 @import'footer';
 
-body {
-    background-color: $bggrey;
-    margin: 0;
-}
 
-.container {
-    max-width: 1170px;
-    margin: 0 auto;
-    padding: 0px 15px;
-}
-
-.flex {
-    display: flex;
-}
-
-.wrapper{
-    width: 100%;
-    height: 65vh;
-
-    .home-heading {
-        position: absolute;
-        margin-top: 300px;
-        
-        h1 {
-            font-size: 80px;
-            text-transform: uppercase;
-            color: $white;
-            animation-delay: 1s;
-        }
-
-        h2 {
-            font-size: 40px;
-            font-weight: 700;
-            color: $white;
-            text-transform: uppercase;
-            animation-delay: 1.5s;
-        }
-    }
-
-    .page-heading {
-        position: absolute;
-        margin-top: 300px;
-        margin-left: auto;
-        margin-right: auto;
-        left: 0;
-        right: 0;
-
-        h1 {
-            font-size: 53px;
-            text-transform: uppercase;
-            color: $white;
-            animation-delay: 1s;
-            text-align: center;
-        }
-
-        h2 {
-            font-size: 24px;
-            font-weight: 700;
-            color: $white;
-            text-transform: uppercase;
-            animation-delay: 1.5s;
-            text-align: center;
-        }
-    }
-}
-
-.wrapper {
-    .wrapper__video {
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
-    }
-
-    .wrapper__image {
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
-    }
-}
-
-
-.central-content {
-    text-align: center;
-    max-width: 770px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-}
