--- a/sass/general.scss
+++ b/sass/general.scss
@@ -19,7 +19,7 @@ body {
 
     .home-heading {
         position: absolute;
-        margin-top: 300px;
+        margin-top: 12%;
         
         h1 {
             font-size: 80px;
@@ -39,7 +39,7 @@ body {
 
     .page-heading {
         position: absolute;
-        margin-top: 300px;
+        margin-top: 12%;
         margin-left: auto;
         margin-right: auto;
         left: 0;
