--- a/sass/old-trip.scss
+++ b/sass/old-trip.scss
@@ -1,9 +1,18 @@
 .gallery {
+    margin-top: 20px;
     a {
         text-decoration: none;
     }
     .old-trip-img {
         width: 24%;
+    }
+}
+
+
+.quotes {
+    margin-top: 50px;
+    h3 {
+      font-style: italic;  
     }
 }
 
