--- a/sass/css.css
+++ b/sass/css.css
@@ -912,6 +912,7 @@ p {
   padding: 13px;
   font-size: 20px;
   font-family: proxima-nova, sans-serif;
+  cursor: pointer;
   border-radius: 5px;
   height: 25px;
 }
