--- a/sass/performance.scss
+++ b/sass/performance.scss
@@ -13,7 +13,7 @@
             padding: 13px;
             font-size: 20px;
             font-family: proxima-nova, sans-serif;
-            
+            cursor: pointer;
             border-radius: 5px;
             height: 25px;
             p {
