Add T&Cs anchor to footer.

--- a/sass/css.css
+++ b/sass/css.css
@@ -1358,6 +1358,9 @@ hr {
 footer .purple-band {
   background-color: #3c2a66;
 }
+footer .purple-band .flex {
+  justify-content: space-between;
+}
 footer .purple-band p {
   padding: 20px 0;
   color: #fff;
