--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -1,6 +1,10 @@
 footer {
     .purple-band {
         background-color: $purple;
+
+        .flex {
+            justify-content: space-between;
+        }
         p {
             padding: 20px 0;
             color: $white;
