Add animation to a new page.

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -9,11 +9,10 @@
 @import'login';
 @import'performance';
 @import'landing';
+@import'anim';
 @import'destination';
 @import'hotel';
 @import'old-trip';
 @import'contact';
 @import'terms';
 @import'footer';
-
-
