--- a/sass/css.css
+++ b/sass/css.css
@@ -1192,6 +1192,54 @@ hr {
   color: #fff;
 }
 
+.purple {
+  background-color: #3c2a66;
+}
+
+.date-large {
+  font-size: 20px;
+  text-transform: uppercase;
+  margin-top: 20px;
+  margin-bottom: 0;
+  font-weight: 700;
+}
+
+.landing-container-anim {
+  width: 100vw;
+  margin: 0 auto;
+}
+
+.copy-container-anim {
+  width: 33vw;
+}
+.copy-container-anim img {
+  padding-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  height: 250px;
+}
+
+.plane-anim {
+  margin-top: 250px;
+  fill: #fff;
+  width: 33vw;
+}
+.plane-anim svg {
+  height: 380px;
+  width: 95%;
+}
+
+.pin-anim {
+  margin-top: 150px;
+  width: 33vw;
+  fill: #fff;
+}
+.pin-anim svg {
+  height: 140px;
+  width: 100%;
+}
+
 .vegas-facts {
   padding: 20px;
   margin-top: 91px;
