--- a/sass/css.css
+++ b/sass/css.css
@@ -1439,5 +1439,8 @@ footer .purple-band a {
   color: #fff;
   text-decoration: none;
 }
+footer .purple-band .terms {
+  display: none;
+}
 
 /*# sourceMappingURL=css.css.map */
