--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -5,6 +5,7 @@ footer {
         .flex {
             justify-content: space-between;
         }
+
         p {
             padding: 20px 0;
             color: $white;
@@ -14,6 +15,10 @@ footer {
         a {
             color: $white;
             text-decoration: none;
+        }
+
+        .terms {
+            display: none;
         }
     }
 }
