re-amend terms display none.

--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -16,5 +16,9 @@ footer {
             color: $white;
             text-decoration: none;
         }
+
+        .terms {
+            display: none;
+        }
     }
 }
